# katsuo-tabetai

./: .env.example  .gitignore  README.md  pyproject.toml
src/katsuo_ai/: __init__.py  context.py  scoring.py  tools.py
src/katsuo_tabetai/: __init__.py  candidates.py  config.py  context.py  evidence.py  main.py  models.py  persistence.py  report.py  scoring.py  scraping.py  tools.py  workflow.py
tests/: helpers.py  test_evidence.py  test_main.py  test_report.py  test_scoring.py  test_scraping.py  test_tools.py  test_workflow.py
