[project]
name = "katsuo-tabetai"
version = "0.1.0"
description = "OpenAI Agents SDK learning project for ranking katsuo restaurants near a hotel in Kochi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13,<5.0",
  "httpx>=0.28,<1.0",
  "openai-agents>=0.18.0,<0.19.0",
  "pydantic>=2.11,<3.0",
  "python-dotenv>=1.2,<2.0",
]

[project.scripts]
katsuo-tabetai = "katsuo_tabetai.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<10.0",
  "pytest-cov>=6.2,<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/katsuo_tabetai"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
